# rusty-agent-sdk

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  rusty_agent_sdk.pyi
.github/workflows/: CI.yml  test-publish.yml
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  examples.md  getting-started.md
examples/: basic_usage.py  new_features.py
src/: embed.rs  errors.rs  generate.rs  http.rs  lib.rs  models.rs  provider.rs  stream.rs
tests/: embedding_parsing.rs  generate_parsing.rs  provider_config.rs  request_building.rs  stream_parsing.rs
