[package]
name = "rusty-agent-sdk"
version = "0.1.0"
edition = "2024"

[lib]
name = "rusty_agent_sdk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.1", features = ["extension-module"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
