[package]
name = "rusty-agent-sdk"
version = "0.1.0"
edition = "2024"

[lib]
name = "rusty_agent_sdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
pyo3 = { version = "0.28.1", features = ["abi3-py39"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
