[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "rusty-agent-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "maturin>=1.12.2",
    "python-dotenv>=1.2.1",
]

[tool.maturin]
features = ["pyo3/extension-module"]
