[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "rusty-agent-sdk"
dynamic = ["version"]
description = "Rust-powered Python SDK for OpenAI-compatible text generation and streaming"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Mangesh Kashid", email = "mtkashid7@gmail.com" },
]
keywords = ["llm", "openai", "rust", "streaming", "openrouter", "sdk", "pyo3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/LEO2822/rusty-agent-sdk"
Repository = "https://github.com/LEO2822/rusty-agent-sdk"
Issues = "https://github.com/LEO2822/rusty-agent-sdk/issues"

[dependency-groups]
dev = [
    "maturin>=1.12.2",
    "python-dotenv>=1.2.1",
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
]
